<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/MyToolBarTheme"
        app:titleTextColor="#FFFFFF"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:title="My Profile">

    </androidx.appcompat.widget.Toolbar>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/user_icon3"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/name"
        android:textSize="25dp"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_medium"
                />
            <TextView
                android:id="@+id/track_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
            <TextView
                android:id="@+id/phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slack_username"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
            <TextView
                android:id="@+id/slack_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textSize="20dp"
                android:fontFamily="@font/montserrat_medium"
                />
        </LinearLayout>




    </LinearLayout>



</LinearLayout>